Switch to using DirectoryServices instead of Novell ldap. Fix yaml config not copying to output

--- a/src/Nmica.SecurityProxy/Nmica.SecurityProxy.csproj
+++ b/src/Nmica.SecurityProxy/Nmica.SecurityProxy.csproj
@@ -15,5 +15,9 @@
       <PackageReference Include="Steeltoe.Security.Authentication.CloudFoundryCore" Version="3.0.2" />
       <PackageReference Include="Yarp.ReverseProxy" Version="1.0.0-preview.11.21223.5" />
     </ItemGroup>
+    <ItemGroup>
+      <None Update="appsettings.yaml" CopyToOutputDirectory="PreserveNewest"/>
+      <None Update="appsettings.*.yaml" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
 
 </Project>
