--- a/src/NMica.AspNetCore.Authentication.Spnego/NMica.AspNetCore.Authentication.Spnego.csproj
+++ b/src/NMica.AspNetCore.Authentication.Spnego/NMica.AspNetCore.Authentication.Spnego.csproj
@@ -9,7 +9,8 @@
     <ItemGroup>
       <PackageReference Include="JetBrains.Annotations" Version="2020.3.0" />
       <PackageReference Include="Kerberos.NET" Version="4.5.105" />
-      <PackageReference Include="Novell.Directory.Ldap.NETStandard" Version="3.6.0" />
+      <PackageReference Include="System.DirectoryServices" Version="5.0.0" />
+      <PackageReference Include="System.DirectoryServices.Protocols" Version="5.0.0" />
 
     </ItemGroup>
 
