Disable cert validation in dev environments
Include skip ssl CF manifest
Enable autobind on LdapConnection

--- a/src/NMica.SecurityProxy/appsettings.Development.yaml
+++ b/src/NMica.SecurityProxy/appsettings.Development.yaml
@@ -3,3 +3,6 @@ Logging:
     Default: Debug
     Microsoft: Trace
     Microsoft.Hosting.Lifetime: Information
+Spnego:
+  Ldap:
+    ValidateServerCertificate: false
